bk_ida/gccida/g0/output_format
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/output_format/src/diagnostic.c:1088:22: error: unknown type name 'output_buffer_0'; did you mean 'output_buffer'?
void  output_format( output_buffer_0 *buffer) 
                     ^~~~~~~~~~~~~~~
                     output_buffer
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/output_format/src/diagnostic.h:28:30: note: 'output_buffer' declared here
typedef struct output_buffer output_buffer;
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/output_format/src/diagnostic.c:1312:15: error: use of undeclared identifier 'off_76BD38'
fancy_abort( &off_76BD38[4], 737, "output_format"); 
              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/output_format/src/diagnostic.c:1316:15: error: use of undeclared identifier 'off_76BD38'
fancy_abort( &off_76BD38[4], 723, "output_format"); 
              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/output_format/src/diagnostic.c:1318:15: error: use of undeclared identifier 'off_76BD38'
fancy_abort( &off_76BD38[4], 725, "output_format"); 
              ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/output_format/src/obj/diagnostic.o] Error 1
